--- a/lone-wolf-app/package.json
+++ b/lone-wolf-app/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser-dynamic": "~11.2.10",
     "@angular/router": "~11.2.10",
     "@ngmodule/material-carousel": "^0.6.0",
+    "angular-calendar": "^0.28.24",
+    "date-fns": "^2.21.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
